feat(cs-api): add system history read side
